--- a/hospitalModules/front/src/app/event/event.component.html
+++ b/hospitalModules/front/src/app/event/event.component.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Events List</h1>
+<div class="container">
+    <div class="row justify-content-md-center">
+<h1 class="ml-3 mb-3 mt-2">Events List</h1>
+    </div>
 <br/>
-<div class="col-sm-8">
-    <table class="table table-hover events1" >
+<div>
+    <table class="table table-hover table-bordered events1" >
         <thead>
         <tr>
             <th>Patient</th>
             <th>Procedure or medicine</th>
             <th>Time</th>
             <th>Status</th>
+            <th></th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -20,11 +25,12 @@
                     <td *ngIf="event.medicine">{{event.medicine}}</td>
                     <td id="td4">{{event.dateTimeEvent | date:'yyyy-MM-dd HH-mm-ss'}}</td>
                     <td id="td5">{{event.statusEvent.title}}</td>
-                    <td *ngIf="event.statusEvent.title == 'planned'"><button (click)="statusChange(event.id,1,'completed',i)">Complete</button></td>
-                    <td *ngIf="event.statusEvent.title == 'planned'"><button (click)="statusChange(event.id,1,'canceled',i)">Cancel</button></td>
+                    <td><button *ngIf="event.statusEvent.title == 'planned'" (click)="statusChange(event.id,1,'completed',i)">Complete</button></td>
+                    <td><button *ngIf="event.statusEvent.title == 'planned'" (click)="statusChange(event.id,1,'canceled',i)">Cancel</button></td>
                  </tr>
         </tbody>
     </table>
+</div>
 </div>
 </body>
 </html>
