--- a/hospitalModules/front/src/app/event/event.component.css
+++ b/hospitalModules/front/src/app/event/event.component.css
@@ -1,1 +1,28 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+.box{
+    background: #e3f2fd;
+}
+.prescEvents {width: 350px;}
+
+img{border: 2px solid #000;}
+
+.table thead tr:nth-child(1){
+    background: #B0C4DE;
+}
+.table thead tr:nth-child(2){
+    background: #B0C4DE;
+}
+.table tr:nth-child(3n){
+    background: #F0F8FF;
+}
+.table tr:nth-child(3n+1){
+    background: #FFF0F7;
+}
+.table tr:nth-child(3n+2){
+    background: #F7FFF0;
+}
+/* Цвет пункта меню, при поднесении к нему курсора мышки или при его нахождении в фокусе */
+#navbarSupportedContent > ul > li > a:hover,
+#navbarSupportedContent > ul > li > a:focus {
+    color:  #B0C4DE;
+}
