--- a/hospitalModules/hospital/src/main/webapp/css/styles.css
+++ b/hospitalModules/hospital/src/main/webapp/css/styles.css
@@ -1,5 +1,5 @@
 .box{
-    background: #F0F8FF;
+    background: #e3f2fd;
 }
 .prescEvents {width: 350px;}
 
@@ -19,4 +19,9 @@ img{border: 2px solid #000;}
 }
 .table tr:nth-child(3n+2){
     background: #F7FFF0;
+}
+/* Цвет пункта меню, при поднесении к нему курсора мышки или при его нахождении в фокусе */
+#navbarSupportedContent > ul > li > a:hover,
+#navbarSupportedContent > ul > li > a:focus {
+    color:  #B0C4DE;
 }
